--- a/POTFILES.in
+++ b/POTFILES.in
@@ -1,104 +1,125 @@
-__init__.py
-commands/__init__.py
-commands/basic.py
-commands/convid.py
-commands/loggertochat.py
-commands/permamem.py
-commands/plugincontrol.py
-commands/tagging.py
-config.py
-event.py
-exceptions.py
-handlers.py
-hangups_conversation.py
-hangupsbot.py
-hooks/__init__.py
-monkeypatch/__init__.py
-monkeypatch/otr_support.py
-parsers/__init__.py
-parsers/kludgy_html_parser.py
-permamem.py
-plugins/_DEPRECATED_simplytranslate.py
-plugins/_DEPRECATED_syncrooms_autotranslate.py
-plugins/__init__.py
-plugins/_cam_mail_intercept/__init__.py
-plugins/_example/__init__.py
-plugins/_example/example_memory.py
-plugins/_example/example_printrenames.py
-plugins/_example/example_uploads.py
-plugins/_example/example_watchmembers.py
-plugins/_example/example_webbridge.py
-plugins/_unittest/__init__.py
-plugins/_unittest/unittest_geticon.py
-plugins/_unittest/unittest_memory.py
-plugins/_unittest/unittest_reprocessor.py
-plugins/_unittest/unittest_shutup.py
-plugins/_unittest/unittest_statusevents.py
-plugins/api.py
-plugins/autoreply.py
-plugins/botaddnotif.py
-plugins/botaliases.py
-plugins/botalive.py
-plugins/catfact.py
-plugins/chance.py
-plugins/chatlogger.py
-plugins/cleverbot/__init__.py
-plugins/convtools.py
-plugins/convtools_invitations.py
-plugins/convtools_public.py
-plugins/default.py
-plugins/dnd.py
-plugins/easteregg.py
-plugins/forecast.py
-plugins/forwarding.py
-plugins/foursquare.py
-plugins/humor_hangoutcalls.py
-plugins/image/__init__.py
-plugins/image/image_linker_reddit/__init__.py
-plugins/image/image_links.py
-plugins/image/image_memegenerator.py
-plugins/image/image_screenshot/__init__.py
-plugins/lookup.py
-plugins/lottery.py
-plugins/mentions.py
-plugins/metar.py
-plugins/monitoradds.py
-plugins/namelock.py
-plugins/remind.py
-plugins/restrictedadd.py
-plugins/showme/__init__.py
-plugins/simplewikipedia.py
-plugins/slack.py
-plugins/slackrtm.py
-plugins/spawn.py
-plugins/spotify.py
-plugins/starter.py
-plugins/subscribe.py
-plugins/syncrooms.py
-plugins/syncrooms_config.py
-plugins/telesync/__init__.py
-plugins/tldr.py
-plugins/twitter.py
-plugins/urbandict.py
-plugins/webbridge_hubot.py
-plugins/webbridge_telegram.py
-plugins/wolframalpha.py
-plugins/xkcd.py
-sinks/__init__.py
-sinks/base_bot_request_handler.py
-sinks/generic/__init__.py
-sinks/generic/simpledemo.py
-sinks/github/__init__.py
-sinks/github/simplepush.py
-sinks/gitlab/__init__.py
-sinks/gitlab/simplepush.py
-sinks/google/__init__.py
-sinks/google/scripts.py
-tagging.py
-tests/api-send.py
-tests/base-send.py
-tests/mockgoogle-send.py
-threadmanager.py
-utils.py
-version.py
-webbridge/__init__.py
+hangupsbot/__init__.py
+hangupsbot/commands/tagging.py
+hangupsbot/commands/alias.py
+hangupsbot/commands/__init__.py
+hangupsbot/commands/basic.py
+hangupsbot/commands/convid.py
+hangupsbot/commands/loggertochat.py
+hangupsbot/commands/permamem.py
+hangupsbot/commands/plugincontrol.py
+hangupsbot/event.py
+hangupsbot/config.py
+hangupsbot/exceptions.py
+hangupsbot/handlers.py
+hangupsbot/monkeypatch/__init__.py
+hangupsbot/hangups_conversation.py
+hangupsbot/parsers/__init__.py
+hangupsbot/parsers/markdown.py
+hangupsbot/parsers/kludgy_html_parser.py
+hangupsbot/plugins/autoreply.py
+hangupsbot/plugins/botaddnotif.py
+hangupsbot/plugins/botaliases.py
+hangupsbot/plugins/chance.py
+hangupsbot/plugins/convtools.py
+hangupsbot/plugins/forwarding.py
+hangupsbot/plugins/easteregg.py
+hangupsbot/plugins/restrictedadd.py
+hangupsbot/plugins/default.py
+hangupsbot/plugins/showme/__init__.py
+hangupsbot/plugins/remind.py
+hangupsbot/plugins/lookup/__init__.py
+hangupsbot/plugins/twitter/__init__.py
+hangupsbot/plugins/syncrooms.py
+hangupsbot/plugins/telesync/__init__.py
+hangupsbot/plugins/telesync/commands_tg.py
+hangupsbot/plugins/telesync/core.py
+hangupsbot/plugins/telesync/parsers.py
+hangupsbot/plugins/telesync/user.py
+hangupsbot/plugins/telesync/message.py
+hangupsbot/plugins/telesync/exceptions.py
+hangupsbot/plugins/host/__init__.py
+hangupsbot/plugins/metar/__init__.py
+hangupsbot/plugins/lottery.py
+hangupsbot/plugins/syncrooms_config.py
+hangupsbot/plugins/botalive.py
+hangupsbot/plugins/_chatbridge/__init__.py
+hangupsbot/plugins/_chatbridge/chatbridge_telegram.py
+hangupsbot/plugins/_chatbridge/chatbridge_slack.py
+hangupsbot/plugins/_chatbridge/chatbridge_syncrooms.py
+hangupsbot/plugins/urbandict/__init__.py
+hangupsbot/plugins/_example/__init__.py
+hangupsbot/plugins/_example/example_argpreprocessor.py
+hangupsbot/plugins/_example/example_memory.py
+hangupsbot/plugins/_example/example_printrenames.py
+hangupsbot/plugins/_example/example_watchmembers.py
+hangupsbot/plugins/_example/example_webbridge.py
+hangupsbot/plugins/_unittest/__init__.py
+hangupsbot/plugins/_unittest/unittest_context.py
+hangupsbot/plugins/_unittest/unittest_geticon.py
+hangupsbot/plugins/_unittest/unittest_memory.py
+hangupsbot/plugins/_unittest/unittest_reprocessor.py
+hangupsbot/plugins/_unittest/unittest_statusevents.py
+hangupsbot/plugins/_unittest/unittest_shutup.py
+hangupsbot/plugins/dnd.py
+hangupsbot/plugins/wolframalpha/__init__.py
+hangupsbot/plugins/tldr.py
+hangupsbot/plugins/__init__.py
+hangupsbot/plugins/chatlogger.py
+hangupsbot/plugins/convtools_invitations.py
+hangupsbot/plugins/hubot/__init__.py
+hangupsbot/plugins/spotify/__init__.py
+hangupsbot/plugins/cleverbot/__init__.py
+hangupsbot/plugins/image/image_linker_reddit/__init__.py
+hangupsbot/plugins/image/image_screenshot/__init__.py
+hangupsbot/plugins/image/__init__.py
+hangupsbot/plugins/image/image_links.py
+hangupsbot/plugins/image/image_memegenerator.py
+hangupsbot/plugins/humor_hangoutcalls.py
+hangupsbot/plugins/monitoradds.py
+hangupsbot/plugins/starter.py
+hangupsbot/plugins/mentions/__init__.py
+hangupsbot/plugins/xkcd/__init__.py
+hangupsbot/plugins/subscribe.py
+hangupsbot/plugins/slackrtm/commands_slack.py
+hangupsbot/plugins/slackrtm/exceptions.py
+hangupsbot/plugins/slackrtm/__init__.py
+hangupsbot/plugins/slackrtm/commands_hangouts.py
+hangupsbot/plugins/slackrtm/core.py
+hangupsbot/plugins/slackrtm/parsers.py
+hangupsbot/plugins/slackrtm/message.py
+hangupsbot/plugins/slackrtm/storage.py
+hangupsbot/plugins/slackrtm/user.py
+hangupsbot/plugins/namelock.py
+hangupsbot/plugins/spawn.py
+hangupsbot/plugins/api/__init__.py
+hangupsbot/plugins/catfact/__init__.py
+hangupsbot/plugins/forecast/__init__.py
+hangupsbot/plugins/foursquare/__init__.py
+hangupsbot/plugins/simplewikipedia/__init__.py
+hangupsbot/permamem.py
+hangupsbot/sinks/github/__init__.py
+hangupsbot/sinks/github/simplepush.py
+hangupsbot/sinks/gitlab/__init__.py
+hangupsbot/sinks/gitlab/simplepush.py
+hangupsbot/sinks/google/__init__.py
+hangupsbot/sinks/google/scripts.py
+hangupsbot/sinks/__init__.py
+hangupsbot/sinks/base_bot_request_handler.py
+hangupsbot/webbridge/__init__.py
+hangupsbot/version.py
+hangupsbot/utils/__init__.py
+hangupsbot/utils/cache.py
+hangupsbot/sync/__init__.py
+hangupsbot/sync/event.py
+hangupsbot/sync/handler.py
+hangupsbot/sync/exceptions.py
+hangupsbot/sync/sending_queue.py
+hangupsbot/sync/image.py
+hangupsbot/sync/utils.py
+hangupsbot/sync/user.py
+hangupsbot/sync/parser.py
+hangupsbot/hangups_constants.py
+hangupsbot/hangups_shim.py
+hangupsbot/tagging.py
+hangupsbot/__main__.py
+hangupsbot/core.py
